fix(conductor): Enhance Notion sync UI feedback and progress tracking